Name:                zdcpu16
Version:             0.1.0
Synopsis:            Zhen DCPU-16 Emulator

-- A longer description of the package.
-- Description:
Homepage:            https://github.com/zhensydow/z-dcpu-16
License:             GPL-3
License-file:        LICENSE
Author:              Luis Cabellos
Maintainer:          zhen.sydow@gmail.com
Copyright:           (c) 2012 Luis Cabellos
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.10

Data-Dir:            data
Data-Files:          *.ttf
Extra-source-files:  README.org
                     FONT_LICENSES
                     examples/*.bin

Library
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Exposed-modules:     ZDCpu16.Util
                       ZDCpu16.Render
                       ZDCpu16.ZDCpu16
                       ZDCpu16.Hardware
                       ZDCpu16.Inst
                       ZDCpu16.Disasm
                       ZDCpu16.EmuState
                       ZDCpu16.DebugRender
                       ZDCpu16.ConState
                       ZDCpu16.ConRPC
                       ZDCpu16.ConRender
  Other-modules:       Paths_zdcpu16
  Build-depends:       base==4.3.*, mtl==2.0.*, transformers==0.2.*, array==0.3.*, bytestring==0.9.*, process==1.0.*, filepath==1.2.*, SDL==0.6.*, SDL-ttf==0.6.*, text==0.11.*, msgpack-rpc==0.7.*
  Ghc-options:         -Wall -O2 -funbox-strict-fields

Executable zdcpu16-emu
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Main-is:             zddcpu16_emu_main.hs
  Build-depends:       base==4.3.*, mtl==2.0.*, transformers==0.2.*, array==0.3.*, bytestring==0.9.*, process==1.0.*, filepath==1.2.*, SDL==0.6.*, SDL-ttf==0.6.*, text==0.11.*, msgpack-rpc==0.7.*
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:
  Ghc-options:         -Wall -O2 -funbox-strict-fields

Executable zdcpu16-con
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Main-is:             zddcpu16_con_main.hs
  Build-depends:       base==4.3.*, mtl==2.0.*, transformers==0.2.*, array==0.3.*, bytestring==0.9.*, process==1.0.*, filepath==1.2.*, SDL==0.6.*, SDL-ttf==0.6.*, text==0.11.*, msgpack-rpc==0.7.*
  Ghc-options:         -Wall -O2 -funbox-strict-fields
